# aerospike-cluster-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend-renewal  Dockerfile.ui  Dockerfile.web  Makefile  README.md  compose-pg.yaml  compose.dev.yaml  compose.yaml  entrypoint.sh  kind-config.yaml  plan.md
.github/: dependabot.yml
aerospike/: aerospike.conf  seed-data.sh
api/: .dockerignore  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/src/aerospike_cluster_manager_api/: client_manager.py  config.py  constants.py  db.py  dependencies.py  k8s_client.py  main.py  sample_data_generator.py
backend/src/aerospike_cluster_manager_api/db/: __init__.py  _base.py  _postgres.py  _sqlite.py
backend/src/aerospike_cluster_manager_api/events/: broker.py  collector.py
backend/src/aerospike_cluster_manager_api/models/: connection.py  k8s_cluster.py  query.py  record.py
backend/src/aerospike_cluster_manager_api/models/k8s/: cluster.py  network.py  operations.py  scheduling.py  storage.py
backend/src/aerospike_cluster_manager_api/routers/: admin_roles.py  admin_users.py  clusters.py  connections.py  events.py  k8s_clusters.py  query.py  records.py  sample_data.py  terminal.py
backend/src/aerospike_cluster_manager_api/services/: info_cache.py  k8s_service.py  metrics_service.py  sample_data_service.py  terminal_service.py
backend/tests/: conftest.py  test_clone_endpoint.py  test_cluster_batch.py  test_connections_router.py  test_db.py  test_events_broker.py  test_info_cache.py  test_k8s_migration_status.py  test_k8s_service_builders.py  test_records_router.py  test_security_headers.py
docs/: README.md  architecture.md  (+5 more)
(+712 files in other folders)
